--- a/ebook/08_ILP.ipynb
+++ b/ebook/08_ILP.ipynb
@@ -56,13 +56,13 @@
     "\n",
     "A _vector processor_ is a CPU that is designed to perform simulatneous instructions on a one-dimensional array (vector) of data. The design space of vector processors is rich and varied. We will consider a limited subset of vector operations called _Single Instruction Stream, Multiple Data Stream_ (SIMD) vectors of fixed width. This is called Pure (fixed) SIMD or Packed SIMD. The Graphics Processing Units (GPUs) that drive modern AI hardware are another example of a vector processor that operate on very-wide vectors.\n",
     "\n",
-    "Our examples will use the Intel XXX instrinsic functions to program 128-bit vectors to demonstrate the speedup possible from parallel execution in the SIMD model.\n",
+    "Our examples will use the Intel instrinsic functions to program 128-bit vectors to demonstrate the speedup possible from parallel execution in the SIMD model.\n",
     "\n",
     "#### What is a vector?\n",
     "\n",
     "A vector is a packed array of data elements that vary from 8-64 bits into a 128-bit contiguous region of memory, i.e. 16 8-bit elements up to 2 64-bit elements. Operations against vectors conduct a basic operation (add, multiply) against all elements of the vector simultaneously.   \n",
     "\n",
-    "![Vector Operation](../images/vector_op.JPG \"Vector Operation\")\n",
+    "![Vector Operation](./images/vector_op.JPG \"Vector Operation\")\n",
     "\n",
     "Compilers provides _intrinsic_ functions that allow one to call vector instructions using C-style functions. They are much more convenient than writing assembly code.\n",
     "\n",
