--- a/ebook/09_factors.ipynb
+++ b/ebook/09_factors.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "#### Startup Costs\n",
     "\n",
-    "The NERSC tutorial on OpenMP (our next unit) draws a schematic of a parallel program as consisting of parallel execution parts and serial parts. \n",
+    "The NERSC tutorial on OpenMP draws a schematic of a parallel program as consisting of parallel execution parts and serial parts. \n",
     "\n",
     "<img src=\"https://docs.nersc.gov/development/programming-models/openmp/OpenMPforkjoin.png\" width=\"500\" title=\"https://docs.nersc.gov/development/programming-models/openmp/OpenMPforkjoin.png\" />\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "The paper [Thiffault et al. Dynamic instrumentation of large-scale MPI and OpenMP applications](http://cs.umanitoba.ca/pub/IPDPS03/DATA/16_04_089.PDF) shows a timeline of parallel computation of a neutron-transfer physics code. The image shows multiple processes awaiting on data to be transferred from other nodes and threads within each process executing intermittently.   \n",
     "\n",
-    "<img src=\"../images/sweep3d.png\" width=\"500\" /> \n",
+    "<img src=\"./images/sweep3d.png\" width=\"500\" /> \n",
     "\n",
     "Interference arises when parallel execution contexts have to wait on each other. This manifests in multiple ways:\n",
     "  * communicating processes waiting on messages\n",
@@ -68,7 +68,7 @@
     "\n",
     "Skew arises when execution cannot advance until all jobs complete. This problem is most acute when one decomposes a problem into independent parts that are of different sizes. The following chart from [Uselton et al. Parallel I/O Performance: From Events to Ensembles](https://crd.lbl.gov/assets/pubs_presos/CDS/FTG/Papers/2010/ipdps10ipm.pdf) shows a parallel code that is running particularly poorly owing to long-running processes.\n",
     "\n",
-    "<img src=\"../images/ioensembles.png\" width=\"500\" />\n",
+    "<img src=\"./images/ioensembles.png\" width=\"500\" />\n",
     "\n",
     "This is an I/O trace. The blue and red lines indicate periods when I/O is being conducted and the white space indicates all else. In this code, all I/O must complete prior to a barrier prior to the computation continuing. The chart shows processes completing waiting for the long running processes. \n",
     "\n",
@@ -130,7 +130,7 @@
     "\n",
     "(I/O or messaging) and computation that occur in parallel are overlapped\n",
     "\n",
-    "<img src=\"../images/overlap.png\" width=\"512\" title=\"Unknown source\" />\n",
+    "<img src=\"./images/overlap.png\" width=\"512\" title=\"Unknown source\" />\n",
     "\n",
     "* _Concept_: When performing a slow operation\n",
     "  * do the slow operation asynchronously\n",
