--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -47,9 +47,11 @@
     "* **Read**: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
     "\n",
     "#### [Cilk](06_fork_join.ipynb)  (Sep. 18)\n",
+    "* work and span\n",
     "* fork/join parallelism\n",
     "* loop parallelism\n",
     "* work stealing and scheduling\n",
+    "* **Read**: Work and Span https://en.wikipedia.org/wiki/Analysis_of_parallel_algorithms\n",
     "\n",
     "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 20)\n",
     "\n",
@@ -60,28 +62,36 @@
     "* False sharing\n",
     "* Reductions in OpenMP\n",
     "    \n",
-    "#### [Factors Against Parallelism](08_factors.ipynb) (Sep. 25)\n",
+    "\n",
+    "#### CPU Parallelism: ILP (08_ILP.ipynb) (Sep 27)\n",
+    "* ILP\n",
+    "    * Pipelines \n",
+    "    * Vectorization\n",
+    "    * Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
+    "\n",
+    "#### [Exercise Numba Jit Compilation](examples/ex_jit.ipynb) (Sep. 25)\n",
+    "* **Read**:\n",
+    "    * https://numba.pydata.org/\n",
+    "    * https://numba.readthedocs.io/en/stable/user/5minguide.html\n",
+    "\n",
+    "\n",
+    "#### [Factors Against Parallelism](09_factors.ipynb) (Sep. 25)\n",
     "* Interference\n",
     "* Skew\n",
     "* Startup costs\n",
     "* Overlap\n",
-    "* top/htop processor utilization\n",
     "\n",
-    "#### CPU Parallelism: ILP\n",
-    "    * ILP\n",
-    "        * Pipelines \n",
-    "        * Vectorization\n",
-    "        * (XX) Other Sources (out-of-order execution, branch prediction, speculative execution)\n",
-    "\n",
-    "#### Tool 3: Vector Intrinsics\n",
-    "  * TODO\n",
     "  \n",
     "#### Concept 7: NUMA\n",
     "  * NUMA architecture\n",
     "  * Demonstarting Example (TODO)\n",
     "  * (XX) Detecting and Programming to NUMA\n",
     "    * numactl and libnuma\n",
-    "    * different between NUMA and hierarchy heterogeneity\n",
+    "    * different between NUMA and hierarchy heterogeneity        \n",
+    "\n",
+    "#### Tool 3: Vector Intrinsics\n",
+    "  * TODO\n",
+    "\n",
     "\n",
     "#### Concept 8: Roofline"
    ]
