--- a/ebook/08_ILP.ipynb
+++ b/ebook/08_ILP.ipynb
@@ -18,12 +18,13 @@
     "* Speculative execution (branch prediction): Running a program past a control point. Most often this is done by predicting the outcome of an if-else branch and running the program past the expected outcome. \n",
     "\n",
     "\n",
-    "One should be aware that all of these techniques exist and have a high-level understanding of them. As a parallel programmer, only **vector processing** has a programmatic interface that you will use. That is our next example and exercise.\n",
+    "One should be aware that all of these techniques exist and have a high-level understanding of them. As a parallel programmer, only **vector processing** has a programmatic interface that you will use.\n",
     "\n",
     "It is typical to assume that CPUs complete one instruction per cycle. This is *NOT TRUE*. The completion rate is a complex function of architecture and program.\n",
     "This is measured by:\n",
     "* Cycles per instruction (CPI): # of clock cycles / # of instructions\n",
     "* Instructions per cycles (IPC): # of instructions / # of clock cycles\n",
+    "\n",
     "These are dynamic measures taking against a running program. It is more typical to use CPI in parallel computing, because we are expecting to complete more than one.  \n",
     "\n",
     "If you would like to go down the well, you can look at the [instruction tables](https://www.agner.org/optimize/instruction_tables.pdf) at the [Software optimization resources](https://www.agner.org/optimize/) page.\n",
