--- a/ebook/examples/ex_jit.ipynb
+++ b/ebook/examples/ex_jit.ipynb
@@ -309,7 +309,7 @@
    "id": "a3161c2e-1e1a-41ee-9f18-ad642cbc8452",
    "metadata": {},
    "source": [
-    "### Conclusions:\n",
+    "### Performance\n",
     "\n",
     "Manually grab all the timings from the notebook and drop them in this plot."
    ]
