--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -63,7 +63,7 @@
     "* Reductions in OpenMP\n",
     "    \n",
     "\n",
-    "#### CPU Parallelism: ILP (08_ILP.ipynb) (Sep 27)\n",
+    "#### [CPU Parallelism: ILP](08_ILP.ipynb) (Sep 25)\n",
     "* ILP\n",
     "    * Pipelines \n",
     "    * Vectorization\n",
@@ -75,7 +75,7 @@
     "    * https://numba.readthedocs.io/en/stable/user/5minguide.html\n",
     "\n",
     "\n",
-    "#### [Factors Against Parallelism](09_factors.ipynb) (Sep. 25)\n",
+    "#### [Factors Against Parallelism](09_factors.ipynb) (Sep. 27)\n",
     "* Interference\n",
     "* Skew\n",
     "* Startup costs\n",
