--- a/ebook/examples/ex_jit.ipynb
+++ b/ebook/examples/ex_jit.ipynb
@@ -345,18 +345,8 @@
     "  * JIT can only speed up the code that is compiled \n",
     "  * Numba has parallelization primitives for embarrassingly parallel code (only)\n",
     " \n",
-    "This is a pretty clear reminder that parallelism is only one of many speedup tools. It turns out to be useful here after we are running on compiled code, but in the big picture, compiling code to get access to ILP is equally important.\n",
-    "\n",
-    "Numba gives access to vectorized code, but it has been hard to isolate. I'm working on it for another example."
+    "This is a pretty clear reminder that parallelism is only one of many speedup tools. It turns out to be useful here after we are running on compiled code, but in the big picture, compiling code to get access to ILP is equally important."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0729a43-c978-4434-915d-7ec07198f09b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
