--- a/ebook/09_factors.ipynb
+++ b/ebook/09_factors.ipynb
@@ -145,8 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# compute \n",
@@ -155,71 +157,75 @@
     "    for i in range(2, number+1):\n",
     "        f *= i\n",
     "    return f\n",
-    " \n",
-    "# synchronous I/O\n",
-    "def io_from_devnull(number):\n",
-    "    with open(\"/dev/null\", \"rb\") as fh:\n",
-    "        for i in range(number):\n",
-    "            fh.read(1)\n",
-    "    return number"
+    "\n",
+    "def comp_send_recv_comp (sq, rq):  \n",
+    "    factorial(10000)\n",
+    "    for i in range(1000):\n",
+    "        sq.put(i)\n",
+    "        val = rq.get()\n",
+    "        #print(val)\n",
+    "    factorial(10000)\n",
+    "    \n",
+    "def send_comp_recv_comp (sq, rq):  \n",
+    "    for i in range(100):\n",
+    "        sq.put(i)\n",
+    "    factorial(10000)\n",
+    "    for i in range(10):\n",
+    "        val = rq.get()\n",
+    "        #print(val)\n",
+    "    factorial(10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.2 ms ± 21.3 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "17.8 ms ± 63 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "116 ms ± 919 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit factorial(10000)\n",
-    "%timeit io_from_devnull(30000)"
+    "%%timeit\n",
+    "from multiprocessing import Process, Queue\n",
+    "q1 = Queue()\n",
+    "q2 = Queue()\n",
+    "p1 = Process(target=comp_send_recv_comp, args=(q1,q2))\n",
+    "p2 = Process(target=comp_send_recv_comp, args=(q2,q1))\n",
+    "p1.start()\n",
+    "p2.start() \n",
+    "p1.join()\n",
+    "p2.join()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32.8 ms ± 49.9 µs per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
+      "41.5 ms ± 498 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -n 20 \n",
-    "factorial(10000)\n",
-    "io_from_devnull(30000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.4 ms ± 725 µs per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -n 20\n",
-    "from multiprocessing import Process\n",
-    "p1 = Process(target=factorial, args=(10000,))\n",
-    "p2 = Process(target=io_from_devnull, args=(30000,))\n",
+    "%%timeit\n",
+    "from multiprocessing import Process, Queue\n",
+    "q1 = Queue()\n",
+    "q2 = Queue()\n",
+    "p1 = Process(target=send_comp_recv_comp, args=(q1,q2))\n",
+    "p2 = Process(target=send_comp_recv_comp, args=(q2,q1))\n",
     "p1.start()\n",
     "p2.start() \n",
     "p1.join()\n",
