Add java lecture.  Placeholder for BW vector.

--- a/ebook/09_factors.ipynb
+++ b/ebook/09_factors.ipynb
@@ -140,12 +140,12 @@
     "  * reorder I/O to initiate as early as possible and wait as late as possible\n",
     "  * while computing at the same time\n",
     "  \n",
-    "I've built a toy example to demonstrate."
+    "I've built a toy example to demonstrate.  The `overlapped` functions send (resp. receive) communicate at the midpoint of it's two computations.  So the first invocation of `factorial` runs concurrently.  In `not_overlapped` none run concurrently. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -158,27 +158,32 @@
     "        f *= i\n",
     "    return f\n",
     "\n",
-    "def comp_send_recv_comp (sq, rq):  \n",
+    "# not overlapped\n",
+    "def not_overlapped1 (q):  \n",
     "    factorial(10000)\n",
-    "    for i in range(1000):\n",
-    "        sq.put(i)\n",
-    "        val = rq.get()\n",
-    "        #print(val)\n",
+    "    factorial(10000)\n",
+    "    q.put(\"message\")\n",
+    "    \n",
+    "def not_overlapped2 (q):\n",
+    "    q.get()\n",
+    "    factorial(10000)\n",
     "    factorial(10000)\n",
     "    \n",
-    "def send_comp_recv_comp (sq, rq):  \n",
-    "    for i in range(100):\n",
-    "        sq.put(i)\n",
+    "# overlapped\n",
+    "def overlapped1 (q):  \n",
     "    factorial(10000)\n",
-    "    for i in range(10):\n",
-    "        val = rq.get()\n",
-    "        #print(val)\n",
+    "    q.put(\"message\")\n",
+    "    factorial(10000)\n",
+    "    \n",
+    "def overlapped2 (q):\n",
+    "    factorial(10000)\n",
+    "    q.get()\n",
     "    factorial(10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -187,17 +192,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "116 ms ± 919 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "70.3 ms ± 769 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "from multiprocessing import Process, Queue\n",
-    "q1 = Queue()\n",
-    "q2 = Queue()\n",
-    "p1 = Process(target=comp_send_recv_comp, args=(q1,q2))\n",
-    "p2 = Process(target=comp_send_recv_comp, args=(q2,q1))\n",
+    "q = Queue()\n",
+    "p1 = Process(target=not_overlapped1, args=(q,))\n",
+    "p2 = Process(target=not_overlapped2, args=(q,))\n",
     "p1.start()\n",
     "p2.start() \n",
     "p1.join()\n",
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -215,17 +219,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41.5 ms ± 498 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "46.8 ms ± 907 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "from multiprocessing import Process, Queue\n",
-    "q1 = Queue()\n",
-    "q2 = Queue()\n",
-    "p1 = Process(target=send_comp_recv_comp, args=(q1,q2))\n",
-    "p2 = Process(target=send_comp_recv_comp, args=(q2,q1))\n",
+    "q = Queue()\n",
+    "p1 = Process(target=overlapped1, args=(q,))\n",
+    "p2 = Process(target=overlapped2, args=(q,))\n",
     "p1.start()\n",
     "p2.start() \n",
     "p1.join()\n",
