minor fix for activity3.ipynb

--- a/ebook/activities/activity3.ipynb
+++ b/ebook/activities/activity3.ipynb
@@ -32,6 +32,7 @@
     "We first look at the loop body \n",
     "\n",
     "```\n",
+    ".LBB0_6:\n",
     "        vpcmpeqd        xmm3, xmm1, xmmword ptr [rdi + 4*rax]\n",
     "        vpmovzxdq       ymm3, xmm3              # ymm3 = xmm3[0],zero,xmm3[1],zero,xmm3[2],zero,xmm3[3],zero\n",
     "        vpand   ymm3, ymm3, ymm2\n",
