--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -114,11 +114,15 @@
     "#### [Java Thread Programming](13_synchronization.ipynb)\n",
     "  * fork/join in java\n",
     "  * Thread classes and Runnable interfaces\n",
-    "\n",
     "  \n",
-    "#### Concept 11: Mutual Exclusion\n",
-    "    * Bakery algorithm\n",
-    "    * Fast Mutual Exclusion"
+    "#### [Mutual Exclusion](14_mutex.ipynb)\n",
+    "* Peterson's algorithm\n",
+    "* Bakery algorithm\n",
+    "* Fast Mutual Exclusion\n",
+    "* **Read**: Herlihy and Shavit. _Art of Multiprocessor Programming_. \n",
+    "  * Chapter 1: all\n",
+    "  * Chapter 2: 2.1-2.6\n",
+    "  * Chapter 7: 7.1-7.3."
    ]
   },
   {
