--- a/ebook/examples/ex_fastmutex.ipynb
+++ b/ebook/examples/ex_fastmutex.ipynb
@@ -12,12 +12,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "711a3c5b-d994-4b44-abd6-d3a94b4dccf0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process 0 is trying to enter the critical section.\n",
+      "Process 0 has entered the critical section.\n",
+      "Process 3 is trying to enter the critical section.\n",
+      "Process 2 is trying to enter the critical section.\n",
+      "Process 4 is trying to enter the critical section.\n",
+      "Process 3 has entered the critical section.\n",
+      "Process 0 has left the critical section.\n",
+      "Process 1 is trying to enter the critical section.\n",
+      "Process 3 has left the critical section.\n",
+      "Process 2 has entered the critical section.\n",
+      "Process 2 has left the critical section.\n",
+      "Process 4 has entered the critical section.\n",
+      "Process 4 has left the critical section.\n",
+      "Process 1 has entered the critical section.\n",
+      "Process 1 has left the critical section.\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "import java.util.concurrent.atomic.AtomicInteger;\n",
     "\n",
@@ -113,7 +136,8 @@
     "This is a cool algorithm that is:\n",
     "* fair\n",
     "* bounded-wait\n",
-    "* requires a linear amount of state in the number of processes.\n",
+    "* requires a linear amount of work in the number of processes.\n",
+    "\n",
     "I really don't like this example.  It is not a reasonable/efficient implementation of a mutual exclusion algorithms. Why not?\n",
     "\n",
     "<!-- because it uses AtomicIntegers (already a synchronization construct) to implement a synchronization construct.  So, not good enough.  There are very simple direct algorithms that you can build on compare and swap primitives.\n",
