Add solutions to examples.

--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -122,7 +122,13 @@
     "* **Read**: Herlihy and Shavit. _Art of Multiprocessor Programming_. \n",
     "  * Chapter 1: all\n",
     "  * Chapter 2: 2.1-2.6\n",
-    "  * Chapter 7: 7.1-7.3."
+    "  * Chapter 7: 7.1-7.3.\n",
+    "  \n",
+    "#### [Roofline Performance Model](15_roofline.ipynb)\n",
+    "* I/O intensity\n",
+    "* Off-chip bandwidth\n",
+    "* I/O and compute limited kernels\n",
+    "* **Read**: Williams et al. [Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://escholarship.org/uc/item/5tz795vq), CACM, 52(4), 2009."
    ]
   },
   {
