--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -93,7 +93,7 @@
     "* virtual memory\n",
     "* simultaneous multi-threading\n",
     "\n",
-    "#### [Fork/Join and Cilk](11_vectorization.ipynb) (Oct. 2)\n",
+    "#### [Vector Programming](11_vectorization.ipynb) (Oct. 2)\n",
     "* vector processing\n",
     "* assemmbly code (overview)\n",
     "* vector registers\n",
