--- a/ebook/15_roofline.ipynb
+++ b/ebook/15_roofline.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Note: About R\n",
+    "\n",
+    "This notebooks is written in R.  The current Dockerfile doesn't have R support because:\n",
+    "* annoyingly heavyweight \n",
+    "* hard to get to run uniformly across M1 and Intel\n",
+    "So, this notebook should be browsed for output.  The cells won't work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### RoofLine\n",
     "\n",
     "\"We believe that for the recent past and foreseeable future, off-chip memory bandwidth will often be the constraining resource. Hence, we want a model that relates processor performance to off-chip memory traffic\"\n",
@@ -196,7 +208,7 @@
     "\n",
     "These are all pretty low-level, but exactly the same optimization trajectory as we used for OpenMP.\n",
     "\n",
-    "<img src=\"./images/roofline2.png\" width=512 />\n",
+    "<img src=\"../images/roofline2.png\" width=512 />\n",
     "\n",
     "Looking at the whole figure, we can see the structure of compute:\n",
     "  * TLP == thread-level parallelism, use all threads\n",
@@ -273,21 +285,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
