Lecture Hadoop Oct 18.

--- a/ebook/16_hpc_cloud.ipynb
+++ b/ebook/16_hpc_cloud.ipynb
@@ -21,7 +21,7 @@
     "* Water temp of 30 degree and 30,000 L/min\n",
     "    * this is a very small stream ~18 cfs\n",
     "* 400 $m^2$ cabinets, 40mW  that seems small.\n",
-    "    * Data centers go to $1.3Mm^2$ and 130mW\n",
+    "    * Data centers go to $1.3Mft^2$ and 130mW\n",
     "    \n",
     "OK, let's move onto data centers (clouds).\n",
     "\n",
