--- a/ebook/19_MRsystems.ipynb
+++ b/ebook/19_MRsystems.ipynb
@@ -53,11 +53,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## MR Semantics\n",
+    "\n",
+    "Let's start with some definitions:\n",
+    "\n",
+    "#### Shuffle\n",
+    "\n",
+    "This is the routing process of mapper outputs to reducer inputs.\n",
+    "\n",
+    "<img src=\"./images/hadoopsem.png\" width=512 />\n",
+    "\n",
+    "#### Partition\n",
+    "\n",
+    "* Partition is the output file of a reducer _process_ (not a single reducer).\n",
+    "  * Contains many reducer keys\n",
+    " \n",
+    "#### Combiner\n",
+    "\n",
+    "This image is linked from https://data-flair.training/blogs/hadoop-combiner-tutorial/.  Please refer to their page.\n",
+    "\n",
+    "<img src=\"images/combiner.jpeg\" width=512 />\n",
+    "\n",
+    "Combiner is a function that runs on the outputs of the mapper before the shuffle.\n",
+    "\n",
+    "* Combiner executes on the mappers $ \\langle key,value \\rangle$ output while in memory at the mapper\n",
+    "  * It is possible to write unique combiner and reduce classes\n",
+    "  * It is common to use the reducer as a combiner\n",
+    "  * Combiner must have algebraic propertics, i.e. `reduce(combine(A),combine(B)) == reduce(A,B)` \n",
+    "  * Traditional reduce operators (aggregates and extrema) work in combiners\n",
+    "* Combiner in WordCount:\n",
+    "  * compute sum output by mapper for each key and send a single aggregated value to reducers\n",
+    "* Combiner for Maximum: \n",
+    "  * compute maximum value for each key.  \n",
+    "  * Reducer computes a maximum of maxima."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Map/Reduce Runtimes\n",
     "\n",
     "From the Google paper https://www.usenix.org/legacy/events/osdi04/tech/dean.html\n",
     "\n",
-    "<img src=\"images/mr.png\" width=512 />\n",
+    "<img src=\"./images/mr.png\" width=512 />\n",
     "\n",
     "* Automatically partition input data\n",
     "  * 16-64 MB chunks for Google\n",
@@ -88,66 +127,7 @@
     "  * Big deal, they don’t really solve\n",
     "  * But, much subsequent research does\n",
     "* Task granularity\n",
-    "  * Metadata size and protocol scaling (not inherent parallelism) limit the size of M and R\n",
-    "  \n",
-    "### Google File System: The Data Service\n",
-    "\n",
-    "* Goals\n",
-    "  * Wide-distribution\n",
-    "  * Commodity hardware\n",
-    "  * High (aggregate) performance\n",
-    "* Different assumptions than traditional file systems\n",
-    "  * Component failures are normal behavior\n",
-    "  * Files are huge (new to Google environment ca. 2004)\n",
-    "* Most files have append-only writing, \n",
-    "  * Mandate append-only writing to realize good I/O properties\n",
-    "  * Why append only?\n",
-    "      * reduce contention -- logical locking of tail rather than physcial locking of offset\n",
-    "      * no data reorganization for writes\n",
-    "\n",
-    "GFS architecture (from https://www.cs.rutgers.edu/~pxk/417/notes/16-dfs.html)\n",
-    "    \n",
-    "<img src=\"images/gfs.png\" width=512 />\n",
-    "\n",
-    "<img src=\"images/gfs2.png\" width=512 />\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*  Reliable services\n",
-    "  * Master, scheduler, lock services fault tolerant\n",
-    "* Data are triple replicated\n",
-    "  * On nodes that have independent failure properties (different racks, power supplies, networks)\n",
-    "  * This became standard practice in cloud key/value stores (for a decade, now supersedes by distributed error coding)\n",
-    "  * Tolerates two failures\n",
-    "  * Rereplicated on failure detection\n",
-    "  \n",
-    "<!--\n",
-    "Here is the originial diagram from https://www.usenix.org/legacy/events/osdi04/tech/dean.html\n",
-    "\n",
-    "<img src=\"images/gfs.orig.png\" width=700 />\n",
-    "-->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### How GFS changed the world\n",
-    "\n",
-    "* Atomic checkpoint and append\n",
-    "  * Major mode for writing\n",
-    "  * Great semantics for limited usage\n",
-    "* Abandon POSIX file system semantics\n",
-    "* In-memory metadata at Master\n",
-    "  * Gotta keep it small\n",
-    "  * Even for big data (scale metadata memory in proportion to aggregate storage)\n",
-    "* Re-replication\n",
-    "  * Keep three, detect missing on read/write\n",
-    "  * Forget reliable storage, forget RAID\n",
-    "* Design for failures (not recovery)"
+    "  * Metadata size and protocol scaling (not inherent parallelism) limit the size of M and R"
    ]
   }
  ],
