--- a/ebook/examples/ex_FoF.ipynb
+++ b/ebook/examples/ex_FoF.ipynb
@@ -43,22 +43,17 @@
    "id": "0d395bee-edd4-4adb-9e73-3e4e3ea7eaec",
    "metadata": {},
    "source": [
-    "### Activity\n",
+    "/hadoop-3.2.4/bin/hadoop com.sun.tools.javac.Main FoF.java### Activity\n",
     "\n",
     "Fill in the TODOs in `hadoop/fof/FoF.java` to make a working version. You can build this with:\n",
     "```\n",
-    "~/hadoop-3.3.4/bin/hadoop com.sun.tools.javac.Main FoF.java\n",
+    "/hadoop-3.2.4/bin/hadoop com.sun.tools.javac.Main FoF.java\n",
     "jar cf fof.jar FoF*.class\n",
-    "~/hadoop-3.3.4/bin/hadoop jar fof.jar FoF ../../data/simple.input /tmp/output\n",
+    "/hadoop-3.2.4/bin/hadoop jar fof.jar FoF ../../data/simple.input /tmp/output\n",
     "```\n",
     "There is sample input in\n",
     "* `data/simple_input` for debugging\n",
-    "* `data/fof.input` for a larger dataset\n",
-    "\n",
-    "This assumes that you have installed haddoop3.3.4 in ~. You must also have a valid `JAVA_PATH` and \n",
-    "```\n",
-    "export HADOOP_CLASSPATH=${JAVA_HOME}/lib/tools.jar\n",
-    "```"
+    "* `data/fof.input` for a larger dataset"
    ]
   },
   {
