--- a/ebook/17_mapreduce.ipynb
+++ b/ebook/17_mapreduce.ipynb
@@ -66,7 +66,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Map/Reduce Example\n",
     "\n",
@@ -101,6 +103,31 @@
     "### WordCount Visualized\n",
     "\n",
     "<img src=\"https://www.researchgate.net/profile/Oscar_Pereira3/publication/270448794/figure/fig6/AS:295098651824130@1447368409317/Word-count-program-flow-executed-with-MapReduce-5.png\" width=768 title=\"from Oscar Perreira @ ResearchGate\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Map/Reduce Sorting Guarantee\n",
+    "\n",
+    "* Map: extracts a sorting key from the value\n",
+    "$$\n",
+    " \\langle key, value \\rangle -> \\langle sort\\_key, output\\_value \\rangle\n",
+    "$$\n",
+    "* Shuffle does not sort strictly:\n",
+    "  * it route's to reducer based on sort key.\n",
+    "  * typically hashing maps key to reducer\n",
+    "  * Keys are sorted as they are presented to the reducer\n",
+    "\n",
+    "Here is the guarantee:\n",
+    "\n",
+    "> We guarantee that within a given partition, the intermediate key/value pairs are processed in increasing key order. This ordering guarantee makes it easy to generate\n",
+    "a sorted output file per partition, which is useful when\n",
+    "the output file format needs to support efficient random\n",
+    "access lookups by key, or users of the output find it convenient to have the data sorted._\n",
+    "\n",
+    "The ordering guarantees sort within partitions. To sort completely send all output to a single partition (use one reducer)."
    ]
   },
   {
