--- a/ebook/18_hadoop.ipynb
+++ b/ebook/18_hadoop.ipynb
@@ -165,10 +165,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Map/Reduce Streaming\n",
+    "\n",
+    "The Hadoop! Map/Reduce implementation is an engine. You can give it arbitrary executable processes that it will run at scale.  As opposed to .jar files.  In the `wordcount_streaming` subdirectory.\n",
+    "\n",
+    "```bash\n",
+    "/hadoop-3.2.4/bin/mapred streaming -input ../../../data/textbible -output /tmp/output4 -mapper mapper.py -reducer reducer.py\n",
+    "```\n",
+    "\n",
+    "It takes two scripts as arguments.\n",
+    "\n",
+    "### Shell equivalence\n",
+    "\n",
+    "For the two shell scripts `mapper.py` and `reducer.py` Hadoop! streaming execution is semantically equivalent to \n",
+    "```bash\n",
+    "cat ../../data/textbible/* | ./mapper.py | sort | ./reducer.py\n",
+    "```\n",
+    "But, both are different than the java WordCount implementation..........because?\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".  Spoiler alert\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "* Streaming mode in Hadoop! gives a different sorting guarantee\n",
+    "* Why?\n",
+    "  * There is no schema\n",
+    "  * So, it sorts the whole output of mapper.py as a key\n",
+    "* This is more restrictive than the default sort\n",
+    "  * And, thus, less efficient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
